crates/voom-cli/tests/snapshots/compliance_envelope__execute_scanned_remux_existing_target_outputs_failure_envelope.snap
---
source: crates/voom-cli/tests/compliance_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "compliance",
  "status": "error",
  "data": {
    "issues": {
      "created_count": 1,
      "updated_count": 0,
      "resolved_count": 0,
      "skipped_count": 3
    },
    "summary": {
      "job_id": "[job-id]",
      "branch_count": 1,
      "ticket_count": 1,
      "dispatch_count": 1,
      "retry_count": 0,
      "failure_count": 0,
      "peak_active_workflow_leases": 1,
      "per_operation": {
        "remux": {
          "ticket_count": 1,
          "dispatch_count": 1,
          "success_count": 1,
          "retry_count": 0,
          "failure_count": 0
        }
      },
      "progress": {
        "total": 1,
        "completed": 1,
        "failed": 0,
        "skipped": 0,
        "remaining": 0
      }
    },
    "phases": [
      {
        "phase_ordinal": 0,
        "phase_name": "normalize",
        "outcome": "completed",
        "report_id": "report_264575dff0cd55fa",
        "report": {
          "schema_version": 1,
          "report_id": "report_264575dff0cd55fa",
          "report_hash": "blake3:e881b2d61692898217917a6ad42110d13124897f0003a2251ba982ab14750a2e",
          "plan_id": "plan_3904d56dde0a712c",
          "plan_hash": "blake3:3904d56dde0a712c4a2dd0ddf0759c9a69d7106592223c137af6e8dcfd38cd0f",
          "policy": {
            "slug": "container-metadata",
            "source_hash": "efc80d0415953f5ed3fa23a052d98561c4153bbfb346f579ccf9270281c1f89b",
            "version_id": 1
          },
          "input": {
            "slug": "cli-scan-remux",
            "input_set_id": 1,
            "fixture_labels": [
              "scan-cli-scan-remux"
            ]
          },
          "summary": {
            "status": "mixed",
            "total_check_count": 4,
            "compliant_check_count": 0,
            "noncompliant_check_count": 1,
            "blocked_check_count": 3,
            "executable_check_count": 1,
            "operation_counts_by_kind": {
              "clear_tags": 1,
              "delete_tag": 1,
              "remux": 1,
              "set_tag": 1
            }
          },
          "checks": [
            {
              "check_id": "check_7a96ef2e33adb6e2",
              "node_id": "node_d9b6b0cc4caf4781",
              "target": {
                "type": "file_version",
                "id": 2
              },
              "compliance_kind": "container",
              "operation_kind": "remux",
              "desired_state": {
                "type": "remux",
                "container": "mkv",
                "track_actions": [],
                "track_order": [
                  "video",
                  "audio",
                  "subtitle"
                ],
                "defaults": [],
                "source_media_snapshot_id": 2
              },
              "observed_state": {
                "container": "mov,mp4,m4a,3gp,3g2,mj2"
              },
              "check_status": "noncompliant",
              "reason": "container mov,mp4,m4a,3gp,3g2,mj2 will be changed to mkv",
              "issue_action_hint": "create_or_update_planned",
              "execution_eligibility": "supported"
            },
            {
              "check_id": "check_c2753796f6a475f4",
              "node_id": "node_c520b9e0e0a4da73",
              "target": {
                "type": "file_version",
                "id": 2
              },
              "compliance_kind": "unsupported",
              "operation_kind": "clear_tags",
              "desired_state": {
                "type": "clear_tags"
              },
              "check_status": "blocked",
              "reason": "operation is not supported by Sprint 5 planner",
              "issue_action_hint": "none",
              "execution_eligibility": "unsupported"
            },
            {
              "check_id": "check_05842f62cb568ec6",
              "node_id": "node_2cb1f04bb88984c6",
              "target": {
                "type": "file_version",
                "id": 2
              },
              "compliance_kind": "unsupported",
              "operation_kind": "set_tag",
              "desired_state": {
                "type": "set_tag",
                "key": "title",
                "value": {
                  "type": "field_path",
                  "path": [
                    "identity",
                    "title"
                  ]
                }
              },
              "check_status": "blocked",
              "reason": "operation is not supported by Sprint 5 planner",
              "issue_action_hint": "none",
              "execution_eligibility": "unsupported"
            },
            {
              "check_id": "check_03ea54620627b4f4",
              "node_id": "node_7e472d6411e7638f",
              "target": {
                "type": "file_version",
                "id": 2
              },
              "compliance_kind": "unsupported",
              "operation_kind": "delete_tag",
              "desired_state": {
                "type": "delete_tag",
                "key": "encoder"
              },
              "check_status": "blocked",
              "reason": "operation is not supported by Sprint 5 planner",
              "issue_action_hint": "none",
              "execution_eligibility": "unsupported"
            }
          ],
          "diagnostics": [
            {
              "severity": "warning",
              "code": "unsupported_compliance_operation",
              "message": "operation clear_tags is not supported by compliance reports",
              "plan_id": "plan_3904d56dde0a712c",
              "node_id": "node_c520b9e0e0a4da73",
              "check_id": "check_c2753796f6a475f4",
              "target": {
                "type": "file_version",
                "id": 2
              }
            },
            {
              "severity": "warning",
              "code": "unsupported_compliance_operation",
              "message": "operation set_tag is not supported by compliance reports",
              "plan_id": "plan_3904d56dde0a712c",
              "node_id": "node_2cb1f04bb88984c6",
              "check_id": "check_05842f62cb568ec6",
              "target": {
                "type": "file_version",
                "id": 2
              }
            },
            {
              "severity": "warning",
              "code": "unsupported_compliance_operation",
              "message": "operation delete_tag is not supported by compliance reports",
              "plan_id": "plan_3904d56dde0a712c",
              "node_id": "node_7e472d6411e7638f",
              "check_id": "check_03ea54620627b4f4",
              "target": {
                "type": "file_version",
                "id": 2
              }
            }
          ],
          "provenance": {
            "reporter": "voom-plan",
            "format": "sprint6-v1"
          }
        }
      }
    ],
    "file_phases": [
      {
        "phase_ordinal": 0,
        "branch_id": "Movie",
        "outcome": "committed",
        "ticket_ids": [
          "[ticket-id]"
        ],
        "produced_file_version_id": "[produced_file_version_id]",
        "produced_file_location_id": "[produced_file_location_id]",
        "reprobe_snapshot_id": "[reprobe_snapshot_id]"
      }
    ],
    "latest_phase_index": 0
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "CONFIG_INVALID",
    "message": "config error: promotion destination already exists: [tmp-dir]/out/Movie.remux.mkv"
  }
}
