crates/voom-cli/tests/snapshots/compliance_envelope__execute_scanned_remux_outputs_ticket_result_ids.snap
---
source: crates/voom-cli/tests/compliance_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "compliance",
  "status": "ok",
  "data": {
    "report": {
      "schema_version": 1,
      "report_id": "report_af855dd2522e10ef",
      "report_hash": "blake3:ddbd0d146e38ef07478e9aad8b5776ba5f58687f8a45923e36aa6101c2447eef",
      "plan_id": "plan_a714ef7724ac7515",
      "plan_hash": "blake3:a714ef7724ac7515bb25d37e684b9bd48e401781ffc9abfb5a7180b95da22b83",
      "policy": {
        "slug": "container-metadata",
        "source_hash": "507b8505b197398ad3c71f966880f50b5a60cec812cab36f7f7409cdb68fd5c3",
        "document_id": 1,
        "version_id": 1
      },
      "input": {
        "slug": "cli-scan-remux",
        "input_set_id": 1,
        "fixture_labels": [
          "scan-cli-scan-remux"
        ]
      },
      "summary": {
        "status": "mixed",
        "total_check_count": 4,
        "compliant_check_count": 0,
        "noncompliant_check_count": 1,
        "blocked_check_count": 3,
        "executable_check_count": 1,
        "operation_counts_by_kind": {
          "clear_tags": 1,
          "delete_tag": 1,
          "remux": 1,
          "set_tag": 1
        }
      },
      "checks": [
        {
          "check_id": "check_87e4429a1cb06aca",
          "node_id": "node_f951e5ab8838b792",
          "target": {
            "type": "file_version",
            "id": 1
          },
          "compliance_kind": "container",
          "operation_kind": "remux",
          "desired_state": {
            "type": "remux",
            "container": "mkv",
            "track_actions": [],
            "track_order": [
              "video",
              "audio",
              "subtitle"
            ],
            "defaults": [],
            "source_media_snapshot_id": 1
          },
          "observed_state": {
            "container": "mp4"
          },
          "check_status": "noncompliant",
          "reason": "container mp4 will be changed to mkv",
          "issue_action_hint": "create_or_update_planned",
          "execution_eligibility": "supported"
        },
        {
          "check_id": "check_a6b69c1aaee6c9d6",
          "node_id": "node_42252154f03cf5c8",
          "target": {
            "type": "file_version",
            "id": 1
          },
          "compliance_kind": "unsupported",
          "operation_kind": "clear_tags",
          "desired_state": {
            "type": "clear_tags"
          },
          "check_status": "blocked",
          "reason": "operation is not supported by Sprint 5 planner",
          "issue_action_hint": "none",
          "execution_eligibility": "unsupported"
        },
        {
          "check_id": "check_7e6d59d0ae03ff08",
          "node_id": "node_0ac465fea71da622",
          "target": {
            "type": "file_version",
            "id": 1
          },
          "compliance_kind": "unsupported",
          "operation_kind": "set_tag",
          "desired_state": {
            "type": "set_tag",
            "key": "title",
            "value": {
              "type": "field_path",
              "path": [
                "identity",
                "title"
              ]
            }
          },
          "check_status": "blocked",
          "reason": "operation is not supported by Sprint 5 planner",
          "issue_action_hint": "none",
          "execution_eligibility": "unsupported"
        },
        {
          "check_id": "check_f4a376b98574ff06",
          "node_id": "node_ea9ac911d4b1eb87",
          "target": {
            "type": "file_version",
            "id": 1
          },
          "compliance_kind": "unsupported",
          "operation_kind": "delete_tag",
          "desired_state": {
            "type": "delete_tag",
            "key": "encoder"
          },
          "check_status": "blocked",
          "reason": "operation is not supported by Sprint 5 planner",
          "issue_action_hint": "none",
          "execution_eligibility": "unsupported"
        }
      ],
      "diagnostics": [
        {
          "severity": "warning",
          "code": "unsupported_compliance_operation",
          "message": "operation clear_tags is not supported by compliance reports",
          "plan_id": "plan_a714ef7724ac7515",
          "node_id": "node_42252154f03cf5c8",
          "check_id": "check_a6b69c1aaee6c9d6",
          "target": {
            "type": "file_version",
            "id": 1
          }
        },
        {
          "severity": "warning",
          "code": "unsupported_compliance_operation",
          "message": "operation set_tag is not supported by compliance reports",
          "plan_id": "plan_a714ef7724ac7515",
          "node_id": "node_0ac465fea71da622",
          "check_id": "check_7e6d59d0ae03ff08",
          "target": {
            "type": "file_version",
            "id": 1
          }
        },
        {
          "severity": "warning",
          "code": "unsupported_compliance_operation",
          "message": "operation delete_tag is not supported by compliance reports",
          "plan_id": "plan_a714ef7724ac7515",
          "node_id": "node_ea9ac911d4b1eb87",
          "check_id": "check_f4a376b98574ff06",
          "target": {
            "type": "file_version",
            "id": 1
          }
        }
      ],
      "provenance": {
        "reporter": "voom-plan",
        "format": "sprint6-v1"
      }
    },
    "issues": {
      "created_count": 1,
      "updated_count": 0,
      "resolved_count": 0,
      "skipped_count": 3
    },
    "execution": {
      "plan_id": "plan_a714ef7724ac7515",
      "report_id": "report_af855dd2522e10ef",
      "job_id": "[job-id]",
      "submitted_node_count": 1,
      "skipped_no_op_count": 0,
      "blocked_count": 3,
      "dispatch_count": 1,
      "failure_count": 0,
      "per_operation": {
        "remux": 1
      }
    },
    "tickets": [
      {
        "ticket_id": 1,
        "operation": "remux",
        "state": "succeeded",
        "result": {
          "job_id": 1,
          "ticket_id": 1,
          "lease_id": 1,
          "source_file_version_id": 1,
          "source_file_location_id": 1,
          "staged_artifact_handle_id": 1,
          "staged_artifact_location_id": 1,
          "verification_id": 1,
          "commit_record_id": 1,
          "result_file_version_id": 2,
          "result_file_location_id": 2,
          "result_media_snapshot_id": 2,
          "staging_path": "[staging-path]",
          "target_path": "[target-path]"
        }
      }
    ]
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
